Name:             ghcbug
Version:          1.0
Synopsis:         Bug in GHC optimizer
Cabal-Version:    >= 1.8
Build-Type:      Simple

executable bug
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  GHC-Options: -O2 -Wall
  Build-depends: base, lens, syb, text, uuid, ListLike, containers, safecopy, uuid-types, uuid-orphans

executable nobug
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  GHC-Options: -O0 -Wall
  Build-depends: base, lens, syb, text, uuid, ListLike, containers, safecopy, uuid-types, uuid-orphans
