Name:             ghcbug
Version:          1.0
Synopsis:         Bug in GHC optimizer
Cabal-Version:    >= 1.8
Build-Type:      Simple

executable bug
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  GHC-Options: -O2 -Wall
  Build-depends: base, microlens, ListLike, containers

executable nobug
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  GHC-Options: -O0 -Wall
  Build-depends: base, microlens, ListLike, containers
